# nbody_simulation

./: Cargo.toml  README.md  particles.json
src/: main.rs
